# makefile

./: 7zipCMakeLists.txt  ATL_ServerCMakeLists.txt  CMakeLists.txt  CrashReporterCMakeLists.txt  DigitalDataCMakeLists.txt  DigitalDisplayCMakeLists.txt  Ed2kLoaderCMakeLists.txt  Makefile.vm  PDCursesCMakeLists.txt  README.md  ResizableLibCMakeLists.txt  TinyXmlCMakeLists.txt  USB_CDC_CMakeLists.txt  YUViewCMakeLists.txt  bit7z-4.0.9CMakeLists.txt  cpprestMakefile  cryptoCMakeLists.txt  cxImageCMakeLists.txt  dep.mk  for.mk  gSim51CMakeLists.txt  gperfCMakeLists.txt  harfbuzzCMakeLists.txt  hidapiCMakeLists.txt  iconv64CMakeLists.txt  id3libCMakeLists.txt  ipfwCMakeLists.txt  jpegCMakeLists.txt  jsonCMakeLists.txt  kmodCMakeLists.txt  libintlCMakeLists.txt  libjpegCMakeLists.txt  libusb-1.0.27CMakeLists.txt  libusb-win32CMakeLists.txt  libusbCMakeLists.txt  libusbkCMakeLists.txt  libwdi-1.5.1CMakeLists.txt  libwdiCMakeLists.txt  lmdbCMakeLists.txt  luaCMakeLists.txt  (+44 more)
cmake/: dep_3rdlib_files.cmake  dep_asm_compile.cmake  dep_atl_server.cmake  dep_bison_gen_cpp.cmake  dep_blkid.cmake  dep_capstone_master.cmake  dep_crypto.cmake  dep_cximage.cmake  dep_embedder_gen_hdr.cmake  dep_flex_gen_cpp.cmake  dep_freetype.cmake  dep_harfbuzz.cmake  dep_id3lib.cmake  dep_jpeg-turbo.cmake  dep_jpeg.cmake  dep_json.cmake  dep_kmod.cmake  dep_libffi.cmake  dep_libintl.cmake  dep_libpcre.cmake  dep_libqt6.cmake  dep_libusb.cmake  dep_lua.cmake  dep_mbedtls.cmake  dep_openssl.cmake  dep_pdcurses.cmake  dep_perl_gen_cpp.cmake  dep_png.cmake  dep_pthread_win32.cmake  dep_qscinc.cmake  dep_readline.cmake  dep_resizablelib.cmake  dep_sdl_release.cmake  dep_sqlite3.cmake  dep_tiff.cmake  dep_tinydtls.cmake  dep_tinyxml.cmake  dep_udev.cmake  dep_unicorn_master.cmake  dep_websocketpp.cmake  (+23 more)
cmake/001/: CMakeLists.txt  main.c
cmake/002/: CMakeLists.txt  main.c
cmake/002/math/: CMakeLists.txt
cmake/003/: CMakeLists.txt
